# renovate-test

./: .pre-commit-config.yaml  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: renovate-config-uv.json  renovate-config.json
.github/workflows/: lint.yaml  renovate.yaml
